javaVFrame much slower than vframeStream

XMLWordPrintable

    • b25

        javaVFrame provides extended frame information, but vframeStream is lighter weight. If you need extended frame information for every frame, use javaVFrame. If you need extended frame information only for select frames, there is no convenient way to go from vframeStream to javaVFrame.

              Assignee:
              Dean Long
              Reporter:
              Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: