8215205: javaVFrame much slower than vframeStream

Reviewed-by: mchung, thartmann